# tasks-cli

./: .gitignore  pyproject.toml
src/: __init__.py
src/cli/: cli.py  errors.py  main.py
src/cli/commands/: pull_request_commands.py
src/clients/oci/: base.py  devops.py
src/core/: errors.py
src/core/config/: __init__.py  configuration.py
src/infrastructure/: oci_client_factory.py  oci_error_handling.py
src/models/: base.py  pull_request.py  repository.py
src/models/app/: pull_request.py
src/services/: devops_service.py
src/services/pull_requests/: service.py
